--- a/bodytreatment.html
+++ b/bodytreatment.html
@@ -247,7 +247,9 @@
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Main-PrpHair-content MainPigment-content
     Cosmo-content MainbodyTrt-Content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Body <span>   Treatment</span></h2>
@@ -273,7 +275,9 @@
             </section> 
             <!-- end---here --> 
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>Different kinds of  <span>body treatment </span></h2>
@@ -295,7 +299,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment Body-Treatment">
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment Body-Treatment"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>Body <span>  Treatments  areas</span></h2>
@@ -311,7 +317,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"   data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -326,7 +334,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"   data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -413,7 +423,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"   data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
