--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,9 @@
                </div>
           </div>
         </section> 
-    <div class="Main-content-Wrapper main-Contact_Wrp">
+    <div class="Main-content-Wrapper main-Contact_Wrp"   data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
             <!-- Slim--Service --> 
             <section class="Slim_Service Filler-Service Prp-service">
                 <div class="container">
@@ -255,7 +257,9 @@
     </div>  
 
      <!-- form--wrp-->
-     <section class="Appointment_Form_wrp">
+     <section class="Appointment_Form_wrp"   data-aos="fade-up"
+     data-aos-easing="linear"
+     data-aos-duration="1300">
         <div class="container">
             <div class="Apt_heading">
                 <img src="image/Apt1.png" alt="image">
@@ -351,7 +355,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"   data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
