--- a/filler.html
+++ b/filler.html
@@ -244,7 +244,9 @@
         </section> 
     <div class="Main-content-Wrapper Main-Filler-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service">
+            <section class="Slim_Service Filler-Service"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Fillers <span> Treatment </span></h2>
@@ -262,7 +264,9 @@
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper">
+            <section class="Benefit_Wrapper"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                             <h2>Amazing Benefits of Dermal <span>Fillers</span></h2>
@@ -279,7 +283,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment">
+            <section class="Filler-Treatment"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>Fillers <span>Treatment Areas</span></h2>
@@ -295,7 +301,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"   data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -310,7 +318,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"   data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -397,7 +407,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"   data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
