--- a/hairtransplant.html
+++ b/hairtransplant.html
@@ -227,7 +227,7 @@
                 <div class="Banner_Content">
                     <div class="Banner_child BL01">
                         <h1>Hair Transplant  </h1>
-                        <h4>(men & women)</h4>
+                        <!-- <h4>(men & women)</h4> -->
                             <p>Lorem ipsum dolor sit amet consectetur 
                                adipisicing elit. Vitae, ducimus.
                                adipisicing elit. Vitae, ducimus. </p>
@@ -331,13 +331,13 @@
                                     <img src="image/man-after.png" alt="img">
                                 </figure>
                              </div>
-                             <div class="rgt hair-cnt01">
+                             <div class="rgt hair-cnt01"> 
                                 <figure  class="grl-aftr">
-                                    <img src="image/girl-after.png" alt="">
-                                </figure>
+                                    <img src="image/girl-before.png" alt="img">
+                                 </figure>
                                 <figure class="grl-bfor">
-                                   <img src="image/girl-before.png" alt="">
-                               </figure>
+                                   <img src="image/girl-after1.png" alt="img">
+                               </figure> 
                             </div>
                          </div>
                     </div>
