--- a/microderma.html
+++ b/microderma.html
@@ -244,7 +244,9 @@
         </section> 
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Scalp-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Microdermabrasion <span>Treatment</span></h2>
@@ -270,7 +272,9 @@
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp Micro_wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp Micro_wrp" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>What to expect after  <span>microdermabrasion</span></h2>
@@ -292,7 +296,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment">
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>microdermabrasion<span> TreatmentAreas</span></h2>
@@ -308,7 +314,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp" data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -323,7 +331,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp" data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -423,7 +433,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content" data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
