--- a/organic.html
+++ b/organic.html
@@ -244,7 +244,9 @@
         </section> 
     <div class="Main-content-Wrapper Main-Filler-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service">
+            <section class="Slim_Service Filler-Service" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Organic<span> Peel</span></h2>
@@ -264,7 +266,9 @@
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper Org_wrp">
+            <section class="Benefit_Wrapper Org_wrp" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                             <h2>SO WHAT ARE THE BENEFITS <span>OF A ORGANIC PEEL?</span></h2>
@@ -287,7 +291,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment">
+            <section class="Filler-Treatment Organic_treatment" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>Organic Peel  <span>BENEFITS</span></h2>
@@ -303,7 +309,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp" data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -318,7 +326,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp" data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -405,7 +415,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"  data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
