--- a/premanentmakeup.html
+++ b/premanentmakeup.html
@@ -242,7 +242,9 @@
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Main-PrpHair-content MainPigment-content
      Main-premanent_wrp">
             <!-- Slim--Service --> 
-            <section class="Slim_Service permanent-service">
+            <section class="Slim_Service permanent-service"  data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>permanent  <span> Makeup</span></h2>
@@ -285,7 +287,9 @@
 
 
 <!-- weight--loss --111-->
-     <section class="Weight-Loss_Wrapper Weight-Loss1 Commn_wrp">
+     <section class="Weight-Loss_Wrapper Weight-Loss1 Commn_wrp"  data-aos="fade-up"
+     data-aos-easing="linear"
+     data-aos-duration="1300">
          <div class="container"> 
             <div class="Weight-Content-wrp">
                 <div class="Weight-Loss permaPink-lip"> 
@@ -366,7 +370,9 @@
 </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"  data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -381,7 +387,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"  data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -480,7 +488,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"  data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
