--- a/slimming.html
+++ b/slimming.html
@@ -245,7 +245,7 @@
         <div class="breadcumb-wrp"> 
           <div class="sub-breadc-cnt">
              <ul class="ul1">
-                <li><a href="mailto:contact@vlccwellness.com"><i class="fa fa-envelope"></i> contact@cossetworld.com</a></li>
+                <li><a href="mailto:contact@cossetworld.com"><i class="fa fa-envelope"></i> contact@cossetworld.com</a></li>
                 <li>    <a href="Tel:9832048033"><i class="fa fa-phone"></i> +91 98320-48033</a></li>
              </ul>
              <ul class="ul2">
@@ -258,7 +258,7 @@
             <!-- Slim--Service --> 
             <section class="Slim_Service"  data-aos="fade-up"
             data-aos-easing="linear"
-            data-aos-duration="1500">
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Slimming Service  <span>at Cosset World</span></h2>
@@ -280,7 +280,7 @@
      <section class="Weight-Loss_Wrapper Weight-Loss1 Commn_wrp"  id="Loss" 
      data-aos="fade-up"
      data-aos-easing="linear"
-     data-aos-duration="1500">
+     data-aos-duration="1300">
          <div class="container">
             <div class="Weight-heading W1">
                 <h2>Weight <span>Loss</span></h2>
@@ -331,7 +331,7 @@
     <section class="Weight-Loss_Wrapper Weight-Gain_Wrapper Commn_wrp" id="Gain"
     data-aos="fade-up"
     data-aos-easing="linear"
-    data-aos-duration="1500"> 
+    data-aos-duration="1300"> 
         <div class="container">
         <div class="Weight-heading W2">
             <h2>Weight <span>Gain</span></h2>
@@ -382,7 +382,7 @@
     <section class="Weight-Loss_Wrapper Body-Therapies_Wrapper Commn_wrp" id="Body" 
     data-aos="fade-up"
     data-aos-easing="linear"
-    data-aos-duration="1500">
+    data-aos-duration="1300">
         <div class="container">
         <div class="Weight-heading W3">
             <h2>Body <span>Therapies</span></h2>
@@ -466,7 +466,7 @@
     <section class="Weight-Loss_Wrapper Spot-Therapies Commn_wrp" id="Spot" 
     data-aos="fade-up"
     data-aos-easing="linear"
-    data-aos-duration="1500">
+    data-aos-duration="1300">
         <div class="container">
         <div class="Weight-heading W4">
             <h2>Spot Reduction <span>Therapies</span></h2>
@@ -872,7 +872,7 @@ data-aos-duration="1500">
       <section class="Weight-Loss_Wrapper VTRON-Relief Commn_wrp BUSTTreatments" id="BUSTTreatments"
       data-aos="fade-up"
       data-aos-easing="linear"
-      data-aos-duration="1500">
+      data-aos-duration="1300">
         <div class="container">
            <div class="Weight-heading W11">
             <h2>BUST  <span> Treatments</span></h2>
@@ -922,7 +922,7 @@ data-aos-duration="1500">
        <section class="Weight-Loss_Wrapper VTRON-Relief Commn_wrp FIGURETREATMENT" id="FIGURETREATMENT" 
        data-aos="fade-up"
        data-aos-easing="linear"
-       data-aos-duration="1500">
+       data-aos-duration="1300">
         <div class="container">
            <div class="Weight-heading W12">
             <h2>FIGURE CORRECTION  <span>TREATMENT </span></h2>
@@ -954,7 +954,7 @@ data-aos-duration="1500">
    <!-- ----Enquery -->
    <div class="Enquery_Wrp"  data-aos="fade-up"
    data-aos-easing="linear"
-   data-aos-duration="1500">
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -971,7 +971,7 @@ data-aos-duration="1500">
     <!--Slimming--grid -->
     <section class="Slimming-grid_wrp"  data-aos="fade-up"
     data-aos-easing="linear"
-    data-aos-duration="1500">
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -1072,7 +1072,7 @@ data-aos-duration="1500">
                 </div>
                 <div class="footer_content"  data-aos="fade-up"
                 data-aos-easing="linear"
-                data-aos-duration="1500">
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
