--- a/terms.html
+++ b/terms.html
@@ -226,7 +226,9 @@
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Scalp-content Main-hairLaser-content
     Privacy-content-wrp Terms-content-wrp">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service"  data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Terms &  <span>conditions</span></h2>
@@ -256,7 +258,9 @@
  
 
             <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp
-            Privacy_wrp tersm_wrp">
+            Privacy_wrp tersm_wrp"  data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>Tracking Technologies <span> and Cookies</span></h2>
