--- a/thread.html
+++ b/thread.html
@@ -244,7 +244,9 @@
         </section> 
     <div class="Main-content-Wrapper Main-Filler-content ">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service">
+            <section class="Slim_Service Filler-Service"  data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Thread <span> lift</span></h2>
@@ -267,7 +269,9 @@
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp"  data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                             <h2>Four Key Benefits of a  <span>Thread Lift</span></h2>
@@ -300,7 +304,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment">
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment"  data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>thread lift <span>Treatment Areas</span></h2>
@@ -316,7 +322,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"  data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -331,7 +339,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"  data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -432,7 +442,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"  data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
