--- a/botox.html
+++ b/botox.html
@@ -247,7 +247,9 @@
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Scalp-content Main-hairLaser-content
     Main-Botox-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service Org_wrp">
+            <section class="Slim_Service Filler-Service Prp-service Org_wrp"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2> <span>BOTOX</span></h2>
@@ -284,7 +286,9 @@
             <!-- end---here -->
  
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>Botox helps you<span> look and feel young.  </span></h2>
@@ -310,7 +314,9 @@
                     </div>
                 </div>
             </section>
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment Body-Treatment Laser-Treatment">
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment Body-Treatment Laser-Treatment"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>Botox  <span>  Treatments  areas</span></h2>
@@ -326,7 +332,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"   data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -341,7 +349,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"   data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -441,7 +451,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"   data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
