--- a/cosmo.html
+++ b/cosmo.html
@@ -247,7 +247,9 @@
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Main-PrpHair-content MainPigment-content
     Cosmo-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Cosmedermat <span>   Treatment</span></h2>
@@ -264,7 +266,9 @@
             </section> 
             <!-- end---here -->
             <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp SkinTrt_Wrp
-            Cosmo_Wrp">
+            Cosmo_Wrp"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container"> 
                     <div class="Benefit-content Organic-Cnt Prp_hair">  
                        <div class="key-wrp">
@@ -278,7 +282,9 @@
                 </div>
             </section>
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>WHAT ARE THE BENEFITS OF <span>Cosmedermat Treatment ? </span></h2>
@@ -314,7 +320,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment">
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300"> 
                 <div class="container">
                     <div class="filler-heading">
                         <h2>Cosmedermat <span>  Treatments  areas</span></h2>
@@ -330,7 +338,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"   data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -345,7 +355,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"   data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -444,7 +456,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"   data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
