--- a/hairlaser.html
+++ b/hairlaser.html
@@ -246,7 +246,9 @@
         </section> 
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Scalp-content Main-hairLaser-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>LASER HAIR  <span>REMOVAL</span></h2>
@@ -269,7 +271,9 @@
             <!-- end---here -->
  
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>Benefits of  <span> Laser Hair Removal </span></h2>
@@ -313,7 +317,9 @@
                     </div>
                 </div>
             </section>
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>Laser hair removal  <span>cost in Gurgaon?  </span></h2>
@@ -332,7 +338,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"   data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -347,7 +355,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"   data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -446,7 +456,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"   data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
