--- a/hairpigment.html
+++ b/hairpigment.html
@@ -245,7 +245,9 @@
         </section> 
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Main-PrpHair-content MainPigment-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>Hair Pigmentation <span> Treatment </span></h2>
@@ -264,7 +266,9 @@
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2> Benefits of Hair  <span>Pigmentation</span></h2>
@@ -302,7 +306,9 @@
                     </div>
                 </div>
             </section>
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>Why   <span>Choose Us?</span> </h2>
@@ -317,7 +323,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment">
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment"   data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>Hair Pigmentation Treatment <span>  Before & After</span></h2>
@@ -333,7 +341,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp"   data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -348,7 +358,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp"   data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -448,7 +460,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content"   data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
