--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="top-social-bar">
                 <div class="child-wrp">
                     <div class="L1 L_cmn01">
-                        <p><i class="fas fa-phone-alt"></i> +91 7673686578</p>
-                        <p><i class="fas fa-envelope"></i>info.cossetworld@gmail.com</p>
+                        <p><a href="Tel:7673686578"><i class="fas fa-phone-alt"></i> +91 7673686578</a> </p>
+                        <p><a href="mailto:contact@cossetworld.com"><i class="fas fa-envelope"></i>info.cossetworld@gmail.com</p></a>
                     </div>
                     <div class="R1 L_cmn01">
                         <p>Follow us :-  
