--- a/prphair.html
+++ b/prphair.html
@@ -244,7 +244,9 @@
         </section> 
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Main-PrpHair-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
                         <h2>PRP Hair <span> Treatment </span></h2>
@@ -267,7 +269,9 @@
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp">
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
                         <h2>Advantages of PRP  <span>Hair Treatment</span></h2>
@@ -313,7 +317,9 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment">
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment" data-aos="fade-up"
+            data-aos-easing="linear"
+            data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>PRP Hair <span> Treatment Before & After</span></h2>
@@ -329,7 +335,9 @@
     </div> 
         
    <!-- ----Enquery -->
-   <div class="Enquery_Wrp">
+   <div class="Enquery_Wrp" data-aos="fade-up"
+   data-aos-easing="linear"
+   data-aos-duration="1300">
        <div class="container">
            <div class="Enquery-content">
                <div class="En-left En-cmn01">
@@ -344,7 +352,9 @@
    <!-- end---here -->
 
     <!--Slimming--grid -->
-    <section class="Slimming-grid_wrp">
+    <section class="Slimming-grid_wrp" data-aos="fade-up"
+    data-aos-easing="linear"
+    data-aos-duration="1300">
         <div class="container">
             <div class="Slim-Grid-heading">
                 <h2>More <span> services</span></h2>
@@ -431,7 +441,9 @@
                         <img src="image/Ftlogo.png" alt="image">
                     </figure>
                 </div>
-                <div class="footer_content">
+                <div class="footer_content" data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1300">
                     <div class="Ft01 Ft_cmn01">
                         <h2>QUICK LINKS</h2>
                         <ul>
